[gd_scene load_steps=13 format=3 uid="uid://duyfjpkuqnp0c"]

[ext_resource type="Script" uid="uid://c3ysxidbncyru" path="res://scenes/toll_station.gd" id="1_mvmqy"]
[ext_resource type="Texture2D" uid="uid://bwjpruq5418py" path="res://assets/sprites/bil-animasjon.png" id="1_qpk5r"]
[ext_resource type="Texture2D" uid="uid://cd3qsevhtif3y" path="res://assets/sprites/level1-background.png" id="3_gdq5f"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mvmqy"]
a = Vector2(69.6667, -76)
b = Vector2(-57.3333, 51.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvmqy"]
size = Vector2(5, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpk5r"]
size = Vector2(5, 16)

[sub_resource type="Curve" id="Curve_mvmqy"]
_data = [Vector2(0.231638, 0.974988), 0.0, 0.0, 0, 0, Vector2(1, 0.146465), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_gdq5f"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.996667)
colors = PackedColorArray(1, 0.898039, 0, 1, 0.20976, 0, 0.0592834, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdq5f"]
size = Vector2(15, 6)

[sub_resource type="Animation" id="Animation_gdq5f"]
resource_name = "moving_camera"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.07, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-43.6667, 49), Vector2(76.3333, -72.3333), Vector2(-43.6667, 49)]
}

[sub_resource type="Animation" id="Animation_bbwnc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-43.6667, 49)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtm44"]
_data = {
&"RESET": SubResource("Animation_bbwnc"),
&"moving_camera": SubResource("Animation_gdq5f")
}

[node name="TollStation" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_mvmqy")
metadata/_edit_vertical_guides_ = [-80.0, 13.0, 109.0]

[node name="TopBars" type="Node2D" parent="."]
z_index = 8
position = Vector2(-19.6667, -8.66667)

[node name="TopBar" type="Sprite2D" parent="TopBars"]
z_index = 6
position = Vector2(-25.0003, 47.1667)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 162, 33, 29)

[node name="TopBar2" type="Sprite2D" parent="TopBars"]
z_index = 6
position = Vector2(4, 18.167)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 162, 33, 29)

[node name="TopBar3" type="Sprite2D" parent="TopBars"]
z_index = 6
position = Vector2(32.9997, -10.8333)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 162, 33, 29)

[node name="TopBar4" type="Sprite2D" parent="TopBars"]
z_index = 6
position = Vector2(61.9997, -39.8333)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 162, 33, 29)

[node name="TopBar5" type="Sprite2D" parent="TopBars"]
z_index = 6
position = Vector2(86, -62.833)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 174, 23, 17)

[node name="Shadows" type="Node2D" parent="."]
position = Vector2(-19.6667, -8.66667)

[node name="Shadow" type="Sprite2D" parent="Shadows"]
z_index = 6
position = Vector2(-21.5, 60.16)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 128, 33, 31)

[node name="Shadow2" type="Sprite2D" parent="Shadows"]
z_index = 6
position = Vector2(9.5, 29.16)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 128, 33, 31)

[node name="Shadow3" type="Sprite2D" parent="Shadows"]
z_index = 6
position = Vector2(40.5, -1.84)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 128, 33, 31)

[node name="Shadow4" type="Sprite2D" parent="Shadows"]
z_index = 6
position = Vector2(71.5, -32.85)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 128, 33, 31)

[node name="Shadow5" type="Sprite2D" parent="Shadows"]
z_index = 6
position = Vector2(93.6667, -51.3333)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 153, 15, 6)

[node name="BaseGraphics" type="Node2D" parent="."]

[node name="TollTop" type="Sprite2D" parent="BaseGraphics"]
z_index = 6
position = Vector2(-58.16, 59)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(-1, 103, 12, 26)

[node name="TollBottom" type="Sprite2D" parent="BaseGraphics"]
z_index = 4
position = Vector2(73.83, -69.667)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(0, 202, 10, 24)

[node name="Level1-background" type="Sprite2D" parent="."]
visible = false
position = Vector2(-19.6667, -8.66667)
texture = ExtResource("3_gdq5f")

[node name="TollLineArea" type="Area2D" parent="."]
position = Vector2(54, -56.3333)

[node name="TollLine" type="CollisionShape2D" parent="TollLineArea"]
position = Vector2(-52.5, 70.5)
shape = SubResource("SegmentShape2D_mvmqy")

[node name="TollBoothArea" type="Area2D" parent="."]
position = Vector2(2, 14)

[node name="TollBoothTop" type="CollisionShape2D" parent="TollBoothArea"]
position = Vector2(80.6667, -94)
shape = SubResource("RectangleShape2D_mvmqy")

[node name="TollBoothBottom" type="CollisionShape2D" parent="TollBoothArea"]
position = Vector2(-82, 65.6667)
shape = SubResource("RectangleShape2D_qpk5r")

[node name="explosionRight" type="CPUParticles2D" parent="."]
z_index = 10
position = Vector2(55, -49)
emitting = false
amount = 40
lifetime = 0.5
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
spread = 180.0
gravity = Vector2(0, 80)
initial_velocity_max = 44.44
angular_velocity_max = 218.18
scale_amount_min = 4.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_mvmqy")
color_ramp = SubResource("Gradient_gdq5f")

[node name="explosionLeft" type="CPUParticles2D" parent="."]
z_index = 10
position = Vector2(-57, 60)
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
spread = 180.0
gravity = Vector2(0, 80)
initial_velocity_max = 44.44
angular_velocity_max = 218.18
scale_amount_min = 4.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_mvmqy")
color_ramp = SubResource("Gradient_gdq5f")

[node name="cameras" type="Node2D" parent="."]
z_index = 6

[node name="camera1area" type="Area2D" parent="cameras"]
position = Vector2(-43.6667, 49)

[node name="camera1collision" type="CollisionShape2D" parent="cameras/camera1area"]
position = Vector2(-8.5, -1)
shape = SubResource("RectangleShape2D_gdq5f")

[node name="camera1sprite" type="Sprite2D" parent="cameras/camera1area"]
position = Vector2(-8, 0)
texture = ExtResource("1_qpk5r")
region_enabled = true
region_rect = Rect2(4, 233, 22, 18)

[node name="camera1explosion" type="CPUParticles2D" parent="cameras/camera1area"]
z_index = 4
position = Vector2(-10, -1)
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
spread = 180.0
gravity = Vector2(0, 80)
initial_velocity_max = 44.44
angular_velocity_max = 218.18
scale_amount_min = 4.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_mvmqy")
color_ramp = SubResource("Gradient_gdq5f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="cameras/camera1area"]
libraries = {
&"": SubResource("AnimationLibrary_mtm44")
}
autoplay = "moving_camera"

[connection signal="area_entered" from="TollLineArea" to="." method="_on_toll_line_area_area_entered"]
[connection signal="body_entered" from="TollLineArea" to="." method="_on_toll_line_area_body_entered"]
[connection signal="body_entered" from="TollBoothArea" to="." method="_on_toll_booth_area_body_entered"]
[connection signal="area_entered" from="cameras/camera1area" to="." method="_on_camera_1_area_area_entered"]
